# digit-panda

./: CMakeLists.txt  README.md  package.xml  setup.py
config/: config.ini
digit_panda/: compute_poses.py
labels/: labels_004.csv
launch/: visualizer.launch
nodes/: digit_node  visualizer_node
src/digit_panda/: save_images_and_poses.py  vtk_visualizer.py
visualizer/: vtk_visualizer.py
