<?xml version="1.0"?>
<package format="2">
  <name>digit_panda</name>
  <version>0.0.0</version>
  <description>Tool for collecting Franka end effector pose / DIGIT image pairs</description>

  <maintainer email="gabriele.caddeo@iit.it">root</maintainer>

  <license>LGPLv2.1</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>

  <export>
  </export>

</package>
